get NGrams into working